# standarflow

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
crates/standarflow-cli/: Cargo.toml
crates/standarflow-cli/src/: common.rs  main.rs  proctree.rs
crates/standarflow-cli/src/cli/: admin.rs  files.rs  focus.rs  hooks.rs  mod.rs  store.rs
crates/standarflow-cli/src/mcp/: helpers.rs  mod.rs  out.rs  req.rs  tools_debug.rs  tools_file.rs  tools_focus.rs  tools_group.rs  tools_session.rs
crates/standarflow-core/: Cargo.toml
crates/standarflow-core/migrations/: V1__init.sql
crates/standarflow-core/src/: db.rs  error.rs  export.rs  lib.rs  test_support.rs  util.rs
crates/standarflow-core/src/pipeline/: event.rs  ingest.rs  mod.rs  tail.rs
crates/standarflow-core/src/pipeline/hooks/: mod.rs
crates/standarflow-core/src/pipeline/hooks/templates/: claude-code.json  generic.json
crates/standarflow-core/src/pipeline/providers/: claude_code.rs  generic.rs  mod.rs
crates/standarflow-core/src/store/: conversation.rs  file_change.rs  file_ref.rs  focus.rs  group.rs  link.rs  meta.rs  mod.rs  participant.rs  session.rs
crates/standarflow-overlay/: Cargo.toml
crates/standarflow-overlay/src/: lib.rs
