[package]
name = "standarflow-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Command-line interface for standarflow."

[[bin]]
name = "standarflow"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env"] }
rmcp = { version = "1.7.0", features = ["server", "macros", "transport-io"] }
schemars = "1.2.1"
serde = "1.0.228"
serde_json = "1.0.149"
standarflow-core = { path = "../standarflow-core" }
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "io-std", "io-util"] }
