[package]
name = "standarflow-overlay"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Cross-OS overlay UI on top of standarflow-core (placeholder)."

[lints]
workspace = true

[dependencies]
standarflow-core = { path = "../standarflow-core" }
